Correction in Custom Scrollbar
Fixed the track of the scrollbar to rectangular

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,6 @@ a {
 
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px orangered;
-    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
